# watchful-owl

./: .gitignore  CMakeLists.txt  ReadMe.md  capturer.cpp  capturer.h  config.h  default.config.json  helpers.cpp  helpers.h  main.cpp
main/: autorun.cpp  autorun.h  capturer.cpp  capturer.h  config.cpp  config.h  constants.hpp  cppath.hpp  crypto.cpp  crypto.h  dev-logger.h  helpers.cpp  helpers.h  logger.cpp  logger.h  main.cpp  perpetual.cpp
main/ui/: browser.cpp  browser.h  browser.hpp  pages.cpp  pages.h  ui.cpp  ui.h
